clock added and countdown added to banner of chatroom show page, still need to fixed countdown (countdown-@booking.start_time)

--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -17,7 +17,7 @@
   &.right {
     flex-direction: row-reverse;
     .message-content {
-      background-color: #d6fa98;
+      background-color: #6ECAD6;
       text-align: right;
       padding: 4px 8px 2px 8px;
       h4 {
@@ -28,7 +28,7 @@
   }
 }
 .message-content {
-  background-color: #F7F7F7;
+  background-color: #184980;
   border-radius: 3px;
   margin: 0 10px;
   padding: 11px 10px 8px 10px;
@@ -60,7 +60,7 @@ input.form-control {
   }
 }
 .chat-header {
-  background-color: #4F2F4C;
+  background-color: #489099;
   color: white;
   padding: 10px 20px;
   margin-top: 10px;
