bookings index is now in the centre, set the width to 100% and adding footer

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,5 +11,6 @@
 @import "flip";
 @import "hex";
 @import "bookings_new";
-
-@import "banner"
+@import "footer";
+@import "banner";
+@import "bookings_index";
