--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -22,7 +22,10 @@
           <% end %>
         </tbody>
       </table>
+  <div id="bookings-index-btn">
+    <%= link_to "Browse Therapist", users_path, class: "btn btn-primary" %>
+  </div>
   </div>
 </div>
 
-<%= link_to "Browse Therapist", users_path, class: "btn btn-primary" %>
+
