fixing banner position

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,8 +6,11 @@
   // display: flex;
   // align-items: center;
     background-size: cover;
-    height: 100vh;
+    height: 132vh;
     color: #eee;
-    padding-top: 40vh;
-    // margin-top: -230px;
+
+    margin-top: -545px;
+    .headers-text {
+      padding-top: 78vh;
+    }
 }
