--- a/app/assets/stylesheets/components/_bookings_index.scss
+++ b/app/assets/stylesheets/components/_bookings_index.scss
@@ -15,3 +15,10 @@
     background-color: #55a9b2;
   }
 }
+
+.table-bordered {
+  text-align: center;
+  #days-booking-index {
+    width: 120px;
+  }
+}
