--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,11 +1,13 @@
 .footer-container {
-  display: flex;
-  justify-content: center;
+  position: relative;
+  bottom:0;
+  width:100%;
+  height:100px;
+  text-align: center;
   background-color: #489099;
   margin-top: 50px;
   padding: 50px;
   color: white;
-  width: 100%;
   li {
     display: inline-block;
     a {
