--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -7,7 +7,7 @@
           <th>Starting Date</th>
           <th>End time</th>
           <th>Status</th>
-          <th>Days to start</th>
+          <th id="days-booking-index" >Days to start</th>
           <th>Duration</th>
           <th>View</th>
           <% if current_user.therapist %>
