--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -69,32 +69,62 @@
     <% if current_user.full_name == nil %>
    Hello: <%= current_user.email %><
     <% else %>
-    Hello:<%= current_user.full_name %></div>
+    Hello:<%= current_user.full_name %>
     <% end %>
+    <br>
+    Welcome to your Booking Info
   </div>
 
+</div>
+
+<aside class="profile-card">
+  <header>
+    <!-- here’s the avatar -->
+    <a target="_blank" href="#">
+      <img src="http://lorempixel.com/150/150/people/" class="hoverZoomLink">
+    </a>
+    <!-- the username -->
+    <h1><%= @booking.therapist.full_name %></h1>
+    <!-- and role or location -->
+    <h3><%= ((@booking.end_time - @booking.start_time) / 60) / 60 %> Hours</h3>
+  </header>
+
+  <!-- bit of a bio; who are you? -->
+  <div class="profile-bio">
+    <%= @booking.description %>
+    <strong>Status: <%= @booking.status %></strong>
+  </div>
+
+  <!-- some social links to show off -->
+  <ul class="profile-social-links">
+    <li>
+      <a target="_blank" href="https://www.facebook.com/creativedonut">
+        <i class="fa fa-facebook"></i>
+      </a>
+    </li>
+    <li>
+      <a target="_blank" href="https://twitter.com/dropyourbass">
+        <i class="fa fa-twitter"></i>
+      </a>
+    </li>
+    <li>
+      <a target="_blank" href="https://github.com/vipulsaxena">
+        <i class="fa fa-github"></i>
+      </a>
+    </li>
+    <li>
+      <a target="_blank" href="https://www.behance.net/vipulsaxena">
+
+        <i class="fa fa-behance"></i>
+      </a>
+    </li>
+    <li><%= link_to "Edit your booking", edit_booking_path(@booking) %></li>
+    <li><%= link_to "Review your Therapist", new_booking_review_path(@booking) %></li>
+    <li><%= link_to "View bookings", bookings_path(@booking) %></li>
+    <li><%= link_to "Chat", booking_chat_rooms_path(@booking), :method => :post %></li>
+
+  </ul>
+</aside>
 
 
-<div class="container">
-  <h1>Booking Details</h1>
-  <h2><%= @booking.therapist.first_name %> <%= @booking.therapist.last_name %></h2>
-  <h2>Starting from:</h2> <p><%=@booking.start_time%></p>
-  <h2>Ending On:</h2> <p><%= @booking.end_time %></p>
-
-  <p><strong>Starting in:</strong> <%= (@booking.start_time.to_date - Date.today).to_i %> Days</p>
-  <p><strong>Booking Duration: </strong><%= (@booking.end_time - @booking.start_time).to_i  %> Days</p>
-  <% if @booking.status %>
-    <p><strong>Status: </strong><%= @booking.status %></p>
-  <% else %>
-    <p><strong>Status: </strong>Pending Confirmation</p>
-<% end  %>
-  <p><%= @booking.description %></p>
-<%= link_to "Edit your booking", edit_booking_path(@booking) %>
-<br>
-<%= link_to "Review your Therapist", new_booking_review_path(@booking) %>
-<br>
-<%= link_to "View bookings", bookings_path(@booking) %>
-<%= link_to "Chat", booking_chat_rooms_path(@booking), :method => :post %>
-
-
-<%= @booking.client_id %>
+</div>
