--- a/app/assets/stylesheets/pages/_chatroomsshow.scss
+++ b/app/assets/stylesheets/pages/_chatroomsshow.scss
@@ -1,9 +1,6 @@
-// .banneri {
-//   z-index: -1;
-// }
-// #canvas {
-//   z-index: 1;
-// }
+.big-box {
+  display: flex
+}
 
 // Options
 $black: #1b1e23;
