--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -76,55 +76,60 @@
   </div>
 
 </div>
+<div class="big-box">
 
-<aside class="profile-card">
-  <header>
-    <!-- here’s the avatar -->
-    <a target="_blank" href="#">
-      <img src="http://lorempixel.com/150/150/people/" class="hoverZoomLink">
-    </a>
-    <!-- the username -->
-    <h1><%= @booking.therapist.full_name %></h1>
-    <!-- and role or location -->
-    <h3><%= ((@booking.end_time - @booking.start_time) / 60) / 60 %> Hours</h3>
-  </header>
+<div class="middle">
+  <aside class="profile-card">
+    <header>
+      <!-- here’s the avatar -->
+      <a target="_blank" href="#">
+        <img src="http://lorempixel.com/150/150/people/" class="hoverZoomLink">
+      </a>
+      <!-- the username -->
+      <h1><%= @booking.therapist.full_name %></h1>
+      <!-- and role or location -->
+      <h3><%= ((@booking.end_time - @booking.start_time) / 60) / 60 %> Hours</h3>
+    </header>
 
-  <!-- bit of a bio; who are you? -->
-  <div class="profile-bio">
-    <%= @booking.description %>
-    <strong>Status: <%= @booking.status %></strong>
+    <!-- bit of a bio; who are you? -->
+    <div class="profile-bio">
+      <%= @booking.description %>
+      <strong>Status: <%= @booking.status %></strong>
+    </div>
+
+    <!-- some social links to show off -->
+    <ul class="profile-social-links">
+      <li>
+        <a target="_blank" href="https://www.facebook.com/creativedonut">
+          <i class="fa fa-facebook"></i>
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://twitter.com/dropyourbass">
+          <i class="fa fa-twitter"></i>
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://github.com/vipulsaxena">
+          <i class="fa fa-github"></i>
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://www.behance.net/vipulsaxena">
+
+          <i class="fa fa-behance"></i>
+        </a>
+      </li>
+    </ul>
+  </aside>
+</div>
+
+  <div class="bottom">
+    <%= link_to "Edit your booking", edit_booking_path(@booking), class: "btn btn-primary"%>
+    <%= link_to "Review your Therapist", new_booking_review_path(@booking), class: "btn btn-primary" %>
+    <%= link_to "View bookings", bookings_path(@booking), class: "btn btn-primary" %>
+    <%= link_to "Chat", booking_chat_rooms_path(@booking), :method => :post , class: "btn btn-primary"%>
+
   </div>
-
-  <!-- some social links to show off -->
-  <ul class="profile-social-links">
-    <li>
-      <a target="_blank" href="https://www.facebook.com/creativedonut">
-        <i class="fa fa-facebook"></i>
-      </a>
-    </li>
-    <li>
-      <a target="_blank" href="https://twitter.com/dropyourbass">
-        <i class="fa fa-twitter"></i>
-      </a>
-    </li>
-    <li>
-      <a target="_blank" href="https://github.com/vipulsaxena">
-        <i class="fa fa-github"></i>
-      </a>
-    </li>
-    <li>
-      <a target="_blank" href="https://www.behance.net/vipulsaxena">
-
-        <i class="fa fa-behance"></i>
-      </a>
-    </li>
-    <li><%= link_to "Edit your booking", edit_booking_path(@booking) %></li>
-    <li><%= link_to "Review your Therapist", new_booking_review_path(@booking) %></li>
-    <li><%= link_to "View bookings", bookings_path(@booking) %></li>
-    <li><%= link_to "Chat", booking_chat_rooms_path(@booking), :method => :post %></li>
-
-  </ul>
-</aside>
-
 
 </div>
