--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -1,70 +1,130 @@
-.container-upcoming-table {
+.container{
+  display: flex;
+  margin: 0;
+
+  .first-tables {
     display: flex;
-    max-width: calc(100% - 1000px);
-
-  .list-group-flush {
-    margin-top: 5vh;
+    flex-direction: column;
     flex-grow: 2;
-    overflow: scroll;
-  }
+    margin-left: 16px;
 
-  .table-title {
-    font-weight: 700;
-    color: #FFFFFF;
-    font-size: 24px;
-    background-color: #6ECAD6;
-  }
 
-  .responsive-table {
-    li {
-      border-radius: 3px;
-      padding: 25px 30px;
+    .upcoming-table{
       display: flex;
-      margin-bottom: 25px;
-      justify-content: space-evenly;
+      margin-top: 32px;
+      flex-direction: column;
+
+
+      .table-title {
+        display: flex;
+        justify-content: space-around;
+        font-weight: 700;
+        padding: 32px 0;
+        color: #FFFFFF;
+        font-size: 24px;
+        background-color: #6ECAD6;
+      }
+
+      .description-row {
+        display: flex;
+        color: #FFFFFF;
+        font-weight: 700;
+        justify-content: space-around;
+        padding: 25px 30px;
+        background-color: #489099;
+      }
+
+      .table-row {
+        display: flex;
+        font-size: 18px;
+        background-color: #ffffff;
+        box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+        justify-content: space-between;
+        padding: 25px 30px;
+
+        .col-1 {
+          display: flex;
+          align-items: center;
+        }
+
+        .submit-status-button {
+          font-family: $body-font;
+          box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+          background-color: #6ECAD6;
+          border: none;
+          color: white;
+          padding: 15px 32px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 16px;
+          margin: 4px 2px;
+          cursor: pointer;
+        }
+      }
     }
-    .table-header {
-      font-size: 18px;
-      color: #FFFFFF;
-      font-weight: 700;
-      background-color: #489099;
-      text-transform: uppercase;
-      letter-spacing: 0.03em;
+
+    .bottom-tables {
+      display: flex;
+      justify-content: space-between;
+
+      .history-table {
+        width: 48%;
+        min-height: 40vh;
+        font-weight: 700;
+        margin: 10% 0;
+        font-size: 24px;
+        background-color: #FFFFFF;
+        box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+
+        .history-title{
+          display: flex;
+          padding: 4px 0;
+          justify-content: space-around;
+          font-weight: 700;
+          color: #FFFFFF;
+          font-size: 24px;
+          background-color: #6ECAD6;
+        }
+
+        .description-row {
+          display: flex;
+          justify-content: space-between;
+          font-size: 1rem;
+          padding: 16px 32px;
+          background-color: #489099;
+          color: #FFFFFF;
+        }
+
+        .table-row {
+          display: flex;
+          justify-content: space-between;
+          color: #000000;
+          font-weight: 300;
+          font-size: 18px;
+        }
+      }
+
+      .reviews-table {
+        width: 48%;
+        min-height: 40vh;
+        font-weight: 700;
+        margin: 10% 0;
+        font-size: 24px;
+        background-color: #FFFFFF;
+        box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+
+        .reviews-title{
+          display: flex;
+          padding: 4px 0;
+          justify-content: space-around;
+          font-weight: 700;
+          color: #FFFFFF;
+          font-size: 24px;
+          background-color: #6ECAD6;
+        }
+      }
     }
-    .table-row {
-      font-size: 18px;
-      background-color: #ffffff;
-      box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
-    }
-    .col-1 {
-      margin: 0 4px;
-      flex-basis: 20%;
-    }
-    .col-2 {
-      flex-basis: 20%;
-    }
-    .col-3 {
-      flex-basis: 20%;
-    }
-    .col-4 {
-      flex-basis: 20%;
-    }
-    .col-5 {
-      flex-basis: 20%;
-    }
-    .submit-status-button {
-      font-family: $body-font;
-      box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-      background-color: #6ECAD6;
-      border: none;
-      color: white;
-      padding: 15px 32px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      margin: 4px 2px;
-      cursor: pointer;
-    }
+  }
 }
-}
+
