--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,27 +1,77 @@
-<div class="container-upcoming-table">
-    <ul class="responsive-table">
-      <li class=table-title>UPCOMING SESSIONS</li>
-      <li class="table-header">
-        <div class="col col-1">Therapist</div>
-        <div class="col col-2">Schedule</div>
-        <div class="col col-3">Amount</div>
-        <div class="col col-4">Status</div>
-      </li>
-      <% @booking.each do |booking| %>
-        <li class="table-row">
-          <div class="col col-1" data-label="Therapist">
-            <%= image_tag "logo.png", class: "avatar-therapist" %>
-            <%= booking.therapist.full_name %></div>
+<div class="container">
+  <div class="first-tables">
+
+
+    <!--UPCOMING SESSIONS TABLE -->
+    <div class="upcoming-table">
+      <div class=table-title>UPCOMING SESSIONS</div>
+      <div class="description-row">
+        <div class="col-1">THERAPIST</div>
+        <div class="col-2">SCHEDULE</div>
+        <div class="col-3">AMOUNT</div>
+        <div class="col-4">STATUS</div>
+      </div>
+      <div class="table-row">
+        <% @booking.each do |booking| %>
+          <% if current_user.therapist %>
+            <div class="col col-1" data-label="User">
+              <%= image_tag "logo.png", class: "avatar-therapist" %>
+              <%= booking.client.full_name %>
+            </div>
+          <% else %>
+            <div class="col col-1" data-label="User">
+              <%= image_tag "logo.png", class: "avatar-therapist" %>
+              <%= booking.therapist.full_name %>
+            </div>
+          <% end %>
           <div class="col col-2" data-label="Schedule"><%= booking.start_time %></div>
           <div class="col col-3" data-label="Amount"><%= booking.therapist.price %> (Pending)</div>
           <div class="col col-4" data-label="Status">
-            <%= simple_form_for booking, class: "status-form", method: :patch, url: booking_path(booking) do |f| %>
-              <%= f.input :status, label: false, collection: ["Pending", "Confirmed", "Cancelled"], input_html: { multiple: false, class: "multiple-select" }  %>
-              <%= f.button :submit, class: "submit-status-button" %>
+            <% if current_user.therapist %>
+              <%= simple_form_for booking, class: "status-form", method: :patch, url: booking_path(booking) do |f| %>
+                  <%= f.input :status, label: false, collection: ["Pending", "Confirmed", "Cancelled"], input_html: { multiple: false, class: "multiple-select" }  %>
+                  <%= f.button :submit, class: "submit-status-button" %>
               <% end %>
+            <% else %>
+              <%= booking.status %>
+            <% end %>
           </div>
-      </li>
-    <% end %>
-    </ul>
+        <% end %>
+      </div>
+    </div>
 
- </div>
+
+    <div class="bottom-tables">
+      <!-- HISTORY TABLE -->
+      <div class="history-table">
+        <div class="history-title">HISTORY</div>
+          <div class="description-row">
+            <% if current_user.therapist %>
+              <div class="col col-1" data-label="Client">CLIENT</div>
+            <% else %>
+              <div class="col col-1" data-label="Therapist">THERAPIST</div>
+            <% end %>
+            <div class="col col-2" data-label="Date">DATE</div>
+          </div>
+          <div class="table-row">
+            <% @booking.each do |booking| %>
+                <% if current_user.therapist %>
+                  <div class="col col-1" data-label="User">
+                    <%= booking.client.full_name %>
+                  </div>
+                <% else %>
+                  <div class="col col-1" data-label="User">
+                    <%= booking.therapist.full_name %>
+                  </div>
+                <% end %>
+              <div class="column-2" data-label="Date"><%= booking.start_time %></div>
+              <hr />
+            <% end %>
+          </div>
+        </div>
+
+      <!-- REVIEWS TABLE -->
+      <div class="reviews-table">
+        <div class="reviews-title">REVIEWS</div>
+    </div>
+</div>
