--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -36,4 +36,15 @@
   }
 }
 
+.homepage-content {
+  background-size: cover;
+  margin: 50px 0 0 0;
+  h2 {
+    text-align: center;
+    margin: 0 0 50px 0;
+  }
+}
 
+.carousel {
+  margin: 50px 0 0 0;
+}
