--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,21 +11,21 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to bookings_path(@booking) do %>
-            <i class="far fa-calendar-check"></i>
-          <% end %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Messages" do %>
-            <i class="far fa-comment-alt nav-link"></i>
-          <% end %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Notifications" do %>
-            <i class="far fa-bell nav-link"></i>
-          <% end %>
-        </li>
+        <div class="nav-main-items">
+          <li class="nav-item active">
+            <%= link_to "Bookings", bookings_path(@booking) %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Messages" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Notifications" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Contact Us" %>
+          </li>
+
+        </div>
         <ul class="nav-item dropdown">
           <%= image_tag "head.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
