fixed nav bar on scroll

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
 <div class="homepage-content">
     <div class="how-it-works">
     <h2>How it Works</h2>
-      <div class="row justify-content-center">
+      <div class="justify-content-center">
         <div class="col-6">
           <%= "Lorem ipsum dolor sit amet, consectetur adipisicing elit " * 100 %>
         </div>
