--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -4,29 +4,29 @@
 
     <!--UPCOMING SESSIONS TABLE -->
     <div class="upcoming-table">
-      <div class=table-title>UPCOMING SESSIONS</div>
-      <div class="description-row">
-        <div class="col-1">THERAPIST</div>
-        <div class="col-2">SCHEDULE</div>
-        <div class="col-3">AMOUNT</div>
-        <div class="col-4">STATUS</div>
+      <div class="upcoming-table-title">UPCOMING SESSIONS</div>
+      <div class="upcoming-description-row">
+        <div class="col">THERAPIST</div>
+        <div class="col">SCHEDULE</div>
+        <div class="col">AMOUNT</div>
+        <div class="col">STATUS</div>
       </div>
-      <div class="table-row">
+      <div class="upcoming-table-row">
         <% @booking.each do |booking| %>
           <% if current_user.therapist %>
-            <div class="col col-1" data-label="User">
+            <div class="col upcoming-labels" data-label="User">
               <%= image_tag "logo.png", class: "avatar-therapist" %>
               <%= booking.client.full_name %>
             </div>
           <% else %>
-            <div class="col col-1" data-label="User">
+            <div class="col upcoming-labels" data-label="User">
               <%= image_tag "logo.png", class: "avatar-therapist" %>
               <%= booking.therapist.full_name %>
             </div>
           <% end %>
-          <div class="col col-2" data-label="Schedule"><%= booking.start_time %></div>
-          <div class="col col-3" data-label="Amount"><%= booking.therapist.price %> (Pending)</div>
-          <div class="col col-4" data-label="Status">
+          <div class="col" data-label="Schedule"><%= booking.start_time %></div>
+          <div class="col" data-label="Amount"><%= booking.therapist.price %> (Pending)</div>
+          <div class="col" data-label="Status">
             <% if current_user.therapist %>
               <%= simple_form_for booking, class: "status-form", method: :patch, url: booking_path(booking) do |f| %>
                   <%= f.input :status, label: false, collection: ["Pending", "Confirmed", "Cancelled"], input_html: { multiple: false, class: "multiple-select" }  %>
@@ -45,29 +45,29 @@
       <!-- HISTORY TABLE -->
       <div class="history-table">
         <div class="history-title">HISTORY</div>
-          <div class="description-row">
+          <div class="history-description-row">
             <% if current_user.therapist %>
-              <div class="col col-1" data-label="Client">CLIENT</div>
+              <div class="col" data-label="Client">CLIENT</div>
             <% else %>
-              <div class="col col-1" data-label="Therapist">THERAPIST</div>
+              <div class="col" data-label="Therapist">THERAPIST</div>
             <% end %>
-            <div class="col col-2" data-label="Date">DATE</div>
+            <div class="col" data-label="Date">DATE</div>
           </div>
-          <div class="table-row">
+          <div class="history-table-row">
             <% @booking.each do |booking| %>
                 <% if current_user.therapist %>
-                  <div class="col col-1" data-label="User">
+                  <div class="col history-labels" data-label="User">
                     <%= booking.client.full_name %>
                   </div>
                 <% else %>
-                  <div class="col col-1" data-label="User">
+                  <div class="col history-labels" data-label="User">
                     <%= booking.therapist.full_name %>
                   </div>
                 <% end %>
-              <div class="column-2" data-label="Date"><%= booking.start_time %></div>
-              <hr />
+              <div class="col" data-label="Date"><%= booking.start_time %></div>
             <% end %>
           </div>
+          <hr />
         </div>
 
       <!-- REVIEWS TABLE -->
@@ -75,3 +75,17 @@
         <div class="reviews-title">REVIEWS</div>
     </div>
 </div>
+
+
+<script>
+
+  const historyTableRow = document.querySelector(".history-table-row");
+  const upcomingTableRow = document.querySelector(".upcoming-table-row");
+
+  const testClass = document.querySelectorAll(".history-labels");
+
+  if (testClass.length > 5) {
+    historyTableRow.classList.add("table-row-overflow");
+  }
+
+</script>
