fixed 'login' link on homepage margin

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,7 +39,9 @@
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <div class="login-home">
+            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          </div>
         </li>
       <% end %>
     </ul>
