--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,8 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
+<% if params[:controller] == 'pages' && params[:action] == "home" %>
+<% else %>
+<% end %>
+
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top navbar-lewagon-home">
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
     <% end %>
