fixed navbar on other pages than home

--- a/app/views/shared/_navbar-two.html.erb
+++ b/app/views/shared/_navbar-two.html.erb
@@ -1,9 +1,4 @@
-<% if params[:controller] == 'pages' && params[:action] == "home" %>
-<% else %>
-
-<% end %>
-
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top navbar-lewagon-home">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top", id="navbar-two-white">
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
     <% end %>
