--- a/app/assets/stylesheets/pages/_bookingsshow.scss
+++ b/app/assets/stylesheets/pages/_bookingsshow.scss
@@ -17,519 +17,149 @@
   display: flex;
   flex-direction: column;
 }
-
-// .booking-card {
-//   align: center;
-//   display: flex;
-//   flex-direction: column;
-//   height: 60%px;
-//   // text-shadow: 0 1px 3px rgba(0,0,0,0.6);
-//   width: 30%;
-//   // position: relative;
-//   border-radius: 8px;
-//   align-items: center;
-//   padding: 16px;
-//   border: 1px solid grey;
-
-//   }
-
-// html {
-//   height: 100%;
-// }
-
-// body {
-//   overflow: hidden;
-//   background: #bcdee7 url("../img/bg.jpg") no-repeat center center fixed;
-//   background-size: cover;
-//   position: fixed;
-//   padding: 0px;
-//   margin: 0px;
-//   width: 100%;
-//   height: 100%;
-//   font: normal 14px/1.618em "Roboto", sans-serif;
-//   -webkit-font-smoothing: antialiased;
-// }
-
-// body:before {
-//   content: "";
-//   height: 0px;
-//   padding: 0px;
-//   border: 130em solid #313440;
-//   position: absolute;
-//   left: 50%;
-//   top: 100%;
-//   z-index: 2;
-//   display: block;
-//   -webkit-border-radius: 50%;
-//   border-radius: 50%;
-//   -webkit-transform: translate(-50%, -50%);
-//   transform: translate(-50%, -50%);
-//   -webkit-animation: puff 0.5s 1.8s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, borderRadius 0.2s 2.3s linear forwards;
-//   animation: puff 0.5s 1.8s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, borderRadius 0.2s 2.3s linear forwards;
-// }
-
-h1,
-h2 {
-  font-weight: 500;
-  margin: 0px 0px 5px 0px;
-}
-
-h1 {
-  font-size: 24px;
-}
-
-h2 {
-  font-size: 16px;
-}
-
-p {
-  margin: 0px;
-}
-
-.profile-card {
-  background: #FFB300;
-  width: 300px;
+.middle {
+  position: relative;
   height: 400px;
+}
+.bottom {
+  display: flex;
+  flex-direction: row;
+  margin-top: 100px;
+  .btn-primary{
+    width: 20%;
+    padding: 10px;
+    margin: 10px;  }
+}
+
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+/*Just the background stuff */
+
+/* The card */
+.card2 {
+  position: relative;
+  height: 450px;
+  width: 900px;
+  margin: 200px auto;
+  background-color: #FFF;
+  -webkit-box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
+
+
+/* Image on the left side */
+.thumbnail {
+  float: left;
+  position: absolute;
+  left: 30px;
+  top: -30px;
+  height: 320px;
+  width: 530px;
+  -webkit-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
+  overflow: hidden;
+}
+
+/*object-fit: cover; */
+/*object-position: center; */
+img.left {
   position: absolute;
   left: 50%;
   top: 50%;
-  z-index: 2;
-  overflow: hidden;
-  opacity: 0;
-  margin-top: 70px;
+  height: auto;
+  width: 100%;
   -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.23);
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.23);
-  -webkit-animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards, moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards, materia 0.5s 2.7s cubic-bezier(0.86, 0, 0.07, 1) forwards;
-  animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards, moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards, materia 0.5s 2.7s cubic-bezier(0.86, 0, 0.07, 1) forwards;
 }
 
-.profile-card header {
-  width: 200px;
-  height: 380px;
-  padding: 40px 20px 30px 20px;
-  display: inline-block;
+/* Right side of the card */
+.right {
+  margin-left: 590px;
+  margin-right: 20px;
+}
+
+h1 {
+  padding-top: 15px;
+  font-size: 3.0rem;
+  color: #4B4B4B;
+}
+
+.author {
+  background-color: #6ECAD6;
+  height: 55px;
+  width: 70%;
+  border-radius: 20px;
+}
+
+.author > img {
+  padding-top: 5px;
+  margin-left: 5px;
   float: left;
-  border-right: 2px dashed #EEEEEE;
-  background: #FFFFFF;
-  color: #000000;
-  margin-top: 50px;
-  opacity: 0;
-  text-align: center;
-  -webkit-animation: moveIn 1s 3.1s ease forwards;
-  animation: moveIn 1s 3.1s ease forwards;
-}
-
-.profile-card header h1 {
-  color: #FF5722;
-}
-
-.profile-card header a {
-  display: inline-block;
-  text-align: center;
-  position: relative;
-  margin: 25px 30px;
-}
-
-.profile-card header a:after {
-  position: absolute;
-  content: "";
-  bottom: 3px;
-  right: 3px;
-  width: 20px;
-  height: 20px;
-  border: 4px solid #FFFFFF;
-  -webkit-transform: scale(0);
-  transform: scale(0);
-  background: -webkit-linear-gradient(top, #2196F3 0%, #2196F3 50%, #FFC107 50%, #FFC107 100%);
-  background: linear-gradient(#2196F3 0%, #2196F3 50%, #FFC107 50%, #FFC107 100%);
-  -webkit-border-radius: 50%;
+  height: 50px;
+  width: 50px;
   border-radius: 50%;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-  -webkit-animation: scaleIn 0.3s 3.5s ease forwards;
-  animation: scaleIn 0.3s 3.5s ease forwards;
 }
 
-.profile-card header a > img {
-  width: 120px;
-  max-width: 100%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  -webkit-transition: -webkit-box-shadow 0.3s ease;
-  transition: box-shadow 0.3s ease;
-  -webkit-box-shadow: 0px 0px 0px 8px rgba(0, 0, 0, 0.06);
-  box-shadow: 0px 0px 0px 8px rgba(0, 0, 0, 0.06);
+h2 {
+  padding-top: 8px;
+  margin-right: 6px;
+  text-align: right;
+  font-size: 0.8rem;
 }
 
-.profile-card header a:hover > img {
-  -webkit-box-shadow: 0px 0px 0px 12px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 0px 12px rgba(0, 0, 0, 0.1);
+.separator {
+  margin-top: 10px;
+  border: 2px solid #489099;
 }
 
-.profile-card .profile-bio {
-  width: 175px;
-  height: 180px;
-  display: inline-block;
-  float: right;
-  padding: 50px 20px 30px 20px;
-  background: #FFFFFF;
-  color: #333333;
-  margin-top: 50px;
-  text-align: center;
-  opacity: 0;
-  -webkit-animation: moveIn 1s 3.1s ease forwards;
-  animation: moveIn 1s 3.1s ease forwards;
+p {
+  text-align: justify;
+  padding-top: 10px;
+  font-size: 1.5rem;
+  line-height: 150%;
+  color: #4B4B4B;
+  word-wrap: break-word;
 }
 
-.profile-social-links {
-  width: 218px;
-  display: inline-block;
-  float: right;
-  margin: 0px;
-  padding: 15px 20px;
-  background: #FFFFFF;
-  margin-top: 50px;
-  text-align: center;
-  opacity: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-animation: moveIn 1s 3.1s ease forwards;
-  animation: moveIn 1s 3.1s ease forwards;
+/* DATE of release */
+h5 {
+  font-size: 6rem;
+  color: #C3C3C3;
 }
 
-.profile-social-links li {
+h6 {
+  font-size: 2rem;
+  color: #C3C3C3;
+}
+
+/* Those futur buttons */
+ul {
+  // margin-left: 250px;
+}
+
+li {
+  display: inline;
   list-style: none;
-  margin: -5px 0px 0px 0px;
-  padding: 0px;
-  float: left;
-  width: 25%;
+  padding-right: 40px;
+  color: #7B7B7B;
+}
+
+/* Floating action button */
+.fab {
+  position: absolute;
+  right: 50px;
+  bottom: -40px;
+  box-sizing: border-box;
+  padding-top: 18px;
+  background-color: #1875D0;
+  width: 80px;
+  height: 80px;
+  color: white;
   text-align: center;
-}
-
-.profile-social-links li a {
-  display: inline-block;
-  color: red;
-  width: 24px;
-  height: 24px;
-  padding: 6px;
-  position: relative;
-  overflow: hidden!important;
-  -webkit-border-radius: 50%;
   border-radius: 50%;
+  -webkit-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
 }
-
-.profile-social-links li a i {
-  position: relative;
-  z-index: 1;
 }
-
-.profile-social-links li a img,
-.profile-social-links li a svg {
-  width: 24px;
-}
-
-@-webkit-keyframes init {
-  0% {
-    width: 0px;
-    height: 0px;
-  }
-  100% {
-    width: 56px;
-    height: 56px;
-    margin-top: 0px;
-    opacity: 1;
-  }
-}
-
-@keyframes init {
-  0% {
-    width: 0px;
-    height: 0px;
-  }
-  100% {
-    width: 56px;
-    height: 56px;
-    margin-top: 0px;
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes puff {
-  0% {
-    top: 100%;
-    height: 0px;
-    padding: 0px;
-  }
-  100% {
-    top: 50%;
-    height: 100%;
-    padding: 0px 100%;
-  }
-}
-
-@keyframes puff {
-  0% {
-    top: 100%;
-    height: 0px;
-    padding: 0px;
-  }
-  100% {
-    top: 50%;
-    height: 100%;
-    padding: 0px 100%;
-  }
-}
-
-@-webkit-keyframes borderRadius {
-  0% {
-    -webkit-border-radius: 50%;
-  }
-  100% {
-    -webkit-border-radius: 0px;
-  }
-}
-
-@keyframes borderRadius {
-  0% {
-    -webkit-border-radius: 50%;
-  }
-  100% {
-    border-radius: 0px;
-  }
-}
-
-@-webkit-keyframes moveDown {
-  0% {
-    top: 50%;
-  }
-  50% {
-    top: 40%;
-  }
-  100% {
-    top: 100%;
-  }
-}
-
-@keyframes moveDown {
-  0% {
-    top: 50%;
-  }
-  50% {
-    top: 40%;
-  }
-  100% {
-    top: 100%;
-  }
-}
-
-@-webkit-keyframes moveUp {
-  0% {
-    background: #FFB300;
-    top: 100%;
-  }
-  50% {
-    top: 40%;
-  }
-  100% {
-    top: 50%;
-    background: #E0E0E0;
-  }
-}
-
-@keyframes moveUp {
-  0% {
-    background: #FFB300;
-    top: 100%;
-  }
-  50% {
-    top: 40%;
-  }
-  100% {
-    top: 50%;
-    background: #E0E0E0;
-  }
-}
-
-@-webkit-keyframes materia {
-  0% {
-    background: #E0E0E0;
-  }
-  50% {
-    -webkit-border-radius: 4px;
-  }
-  100% {
-    width: 440px;
-    height: 280px;
-    background: #FFFFFF;
-    -webkit-border-radius: 4px;
-  }
-}
-
-@keyframes materia {
-  0% {
-    background: #E0E0E0;
-  }
-  50% {
-    border-radius: 4px;
-  }
-  100% {
-    width: 440px;
-    height: 280px;
-    background: #FFFFFF;
-    border-radius: 4px;
-  }
-}
-
-@-webkit-keyframes moveIn {
-  0% {
-    margin-top: 50px;
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-    margin-top: -20px;
-  }
-}
-
-@keyframes moveIn {
-  0% {
-    margin-top: 50px;
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-    margin-top: -20px;
-  }
-}
-
-@-webkit-keyframes scaleIn {
-  0% {
-    -webkit-transform: scale(0);
-  }
-  100% {
-    -webkit-transform: scale(1);
-  }
-}
-
-@keyframes scaleIn {
-  0% {
-    transform: scale(0);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-@-webkit-keyframes ripple {
-  0% {
-    transform: scale3d(0, 0, 0);
-  }
-  50%,
-  100% {
-    -webkit-transform: scale3d(1, 1, 1);
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes ripple {
-  0% {
-    transform: scale3d(0, 0, 0);
-  }
-  50%,
-  100% {
-    transform: scale3d(1, 1, 1);
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-// @media screen and (min-aspect-ratio: 4/3) {
-//   body {
-//     background-size: cover;
-//   }
-//   body:before {
-//     width: 0px;
-//   }
-//    @-webkit-keyframes puff {
-//     0% {
-//       top: 100%;
-//       width: 0px;
-//       padding-bottom: 0px;
-//     }
-//     100% {
-//       top: 50%;
-//       width: 100%;
-//       padding-bottom: 100%;
-//     }
-//   }
-//   @keyframes puff {
-//     0% {
-//       top: 100%;
-//       width: 0px;
-//       padding-bottom: 0px;
-//     }
-//     100% {
-//       top: 50%;
-//       width: 100%;
-//       padding-bottom: 100%;
-//     }
-//   }
-// }
-
-// @media screen and (min-height: 480px) {
-//   .profile-card header {
-//     width: auto;
-//     height: auto;
-//     padding: 30px 20px;
-//     display: block;
-//     float: none;
-//     border-right: none;
-//   }
-//   .profile-card .profile-bio {
-//     width: auto;
-//     height: auto;
-//     padding: 15px 20px 30px 20px;
-//     display: block;
-//     float: none;
-//   }
-//   .profile-social-links {
-//     width: 100%;
-//     display: block;
-//     float: none;
-//   }
-//   @-webkit-keyframes materia {
-//     0% {
-//       background: #E0E0E0;
-//     }
-//     50% {
-//       -webkit-border-radius: 4px;
-//     }
-//     100% {
-//       width: 280px;
-//       height: 440px;
-//       background: #FFFFFF;
-//       -webkit-border-radius: 4px;
-//     }
-//   }
-//   @keyframes materia {
-//     0% {
-//       background: #E0E0E0;
-//     }
-//     50% {
-//       border-radius: 4px;
-//     }
-//     100% {
-//       width: 280px;
-//       height: 440px;
-//       background: #FFFFFF;
-//       border-radius: 4px;
-//     }
-//   }
-// }
